<resources>
    <string name="app_name">Superest</string>
    <string name="welcomeMessage">Welcome \n to our store</string>
    <string name="welcomeSecondMessage">Get your groceries in as fast as one hour</string>
    <string name="get_started">Get started</string>
    <string name="authPageMessage">Get your groceries \nwith superest</string>
    <string name="orConnectWithGoogle">Or connect with Google</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="please_add_your_phone_number_to_continue">Please add your phone number to continue</string>
    <string name="please_add_a_valid_phone_number">Please add a valid phone number</string>
    <string name="please_check_internet_connection">Please check internet connection</string>
    <string name="errorMessage">An error occurred, Please try again later</string>
    <string name="enter_your_6_digit_code">Enter your 6-digit code</string>
    <string name="code">Code</string>
    <string name="code_hint">- - - - - -</string>
    <string name="type_verification_code_first">Please type verification code first.</string>
    <string name="resend_code">Resend Code</string>
    <string name="countDown">00:%1$02d</string>
    <string name="add_your_name_here">Add your name here.</string>
    <string name="select_your_location">Select your location</string>
    <string name="submit">submit</string>
    <string name="confirm_location">confirm location</string>
    <string name="google_maps_api_key">AIzaSyC6t-QwrVTSmQZeQuj05bvY_AWhIDQ3Mfw</string>
    <string name="location_permission_attention">Attention! Some features can\'t work normally without location permission</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="enableGPS">This application requires GPS to work properly, do you want to enable it?</string>
    <string name="cannotMakeGPSRequest">You can\'t make map requests</string>
    <string name="enable">Enable</string>
    <string name="get_my_location">Locate Me</string>
    <string name="addUserName">Please add your name first!</string>
    <string name="addUserImage">Please add an  image to your account!</string>
    <string name="addUserLocation">Please add your location first!</string>
    <string name="errorCreateAccount">An error occurred when trying to create account, please check your internet connection and try again.</string>
    <string name="accountCreatedSuccessfully">Account created successfully.</string>
    <string name="webClientId">CLIENT ID</string>
    <string name="welcome">Welcome back,</string>
    <string name="search_store">Search Store</string>
    <string name="see_all">See all</string>
    <string name="shop">Shop</string>
    <string name="explore">Explore</string>
    <string name="cart">Cart</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <string name="productQuantity">%s, Price</string>
    <string name="price">%.2f$</string>
    <string name="shareProduct">Hello bro,\n%1$s product is very awesome and have a very cheap price, it just cost %2$.2f$.\n You can buy it now with Superest
    supermarket app.</string>
    <string name="product_detail">Product Detail</string>
    <string name="progressTextValue">%.0fg</string>
    <string name="progressCaloriesValue">%.0f</string>
    <string name="add_to_cart">add to cart</string>
    <string name="find_products">Find Products</string>
    <string name="add_all_to_cart">Add all to cart</string>
    <string name="savedToCart">Products have been added to the card successfully.</string>
    <string name="go_to_checkout">Go to checkout</string>
    <string name="my_cart">My Cart</string>
    <string name="productAddToCart">Product added to My Cart successfully.</string>
    <string name="my_orders">My Orders</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="log_out">Log Out</string>
    <string name="delivery">Delivery</string>
    <string name="payment">Payment</string>
    <string name="total_cost">Total Cost</string>
    <string name="place_order">Place Order</string>
    <string name="ok">OK</string>
    <string name="addPaymentMethod">Please add a payment method to continue!</string>
    <string name="back_to_home">Back to home</string>
    <string name="successful_order_title">Your Order has been accepted</string>
    <string name="successful_order_message">Your items has been placed and is on its way to begin processed.</string>
    <string name="track_order">Track order</string>
    <string name="fail_order_title">Oops! Order Failed</string>
    <string name="fail_order_message">Something went wrong. Please try another payment card.</string>
    <string name="tryAgain">Try Again</string>
    <string name="paymentError">An error occurred with payment method.</string>
    <string name="error">Error:</string>
    <string name="noProductsCart">No Products in Cart!</string>
    <string name="tracking_order">Tracking Order:</string>
    <string name="order_placed">Order Placed</string>
    <string name="order_placed_message">We have received your order</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="order_confirmed_message">Your order has been confirmed</string>
    <string name="order_shipped">Order Shipped</string>
    <string name="order_shipped_message">Your order is on its way</string>
    <string name="order_delivered">Order Delivered</string>
    <string name="order_delivered_message">Your order is now in your hands</string>
    <string name="accountSettings">Account Settings</string>
    <string name="logOutMessage">You have logged out successfully</string>
    <string name="locationChanged">Your location changed successfully!</string>
    <string name="myLocation">My Location:</string>
    <string name="productQuantityError">\"Please add valid quantity!\"</string>
    <string name="order_num">Order Num: </string>
    <string name="order_date">Order Date: </string>
    <string name="order_location">Order Location: </string>
    <string name="order_status">Order Status: </string>
    <string name="order_products">Order Products: </string>
    <string name="orderProductsWithCost">%s products - %.2f$</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name">Name:</string>
    <string name="product_quantity">Quantity:</string>
    <string name="product_total_price">Total Price:</string>
    <string name="accountUpdatedSuccessfully">Account Updated Successfully</string>
    <string name="backOnline">Back Online</string>
    <string name="connectionLost">Connection Lost!</string>
</resources>