<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.mhmdawad.superest.model.OrderEnums" />

        <variable
            name="fragment"
            type="com.mhmdawad.superest.presentation.main.fragment.account.order.TrackOrdersFragment" />

        <variable
            name="order"
            type="com.mhmdawad.superest.model.OrderModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/vegetables_blur_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:background="@null"
            android:onClick="@{()-> fragment.backPressFragment()}"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_baseline_arrow_back"
            app:layout_constraintBottom_toTopOf="@+id/guideline10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".15" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:gravity="center"
            android:text="@string/tracking_order"
            android:textColor="@color/green"
            android:textSize="@dimen/_21sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/backButton"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/backButton"
            app:layout_constraintTop_toTopOf="@+id/backButton" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@{order.orderId}"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="@+id/textView15"
            app:layout_constraintStart_toEndOf="@+id/backButton"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <View
                android:id="@+id/view4"
                android:layout_width="@dimen/_14sdp"
                android:layout_height="@dimen/_14sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/ic_green_check"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/linearLayout3" />

            <View
                android:id="@+id/view6"
                android:layout_width="@dimen/_2sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@color/green"
                app:layout_constraintEnd_toEndOf="@+id/view4"
                app:layout_constraintStart_toStartOf="@+id/view4"
                app:layout_constraintTop_toBottomOf="@+id/view4" />

            <View
                android:id="@+id/view5"
                android:layout_width="@dimen/_14sdp"
                android:layout_height="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@{order.orderStatus != OrderEnums.PLACED? @drawable/ic_green_check: @drawable/shape_status_current}"
                app:layout_constraintEnd_toEndOf="@+id/view4"
                app:layout_constraintStart_toStartOf="@+id/view4"
                app:layout_constraintTop_toBottomOf="@+id/view6" />

            <View
                android:id="@+id/view8"
                android:layout_width="@dimen/_2sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@{order.orderStatus != OrderEnums.PLACED? @color/green: @color/lightBlack}"
                app:layout_constraintEnd_toEndOf="@+id/view5"
                app:layout_constraintStart_toStartOf="@+id/view5"
                app:layout_constraintTop_toBottomOf="@+id/view5" />

            <View
                android:id="@+id/view7"
                android:layout_width="@dimen/_14sdp"
                android:layout_height="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@{order.orderStatus!= OrderEnums.PLACED &amp;&amp; order.orderStatus!= OrderEnums.CONFIRMED? @drawable/ic_green_check: @drawable/shape_status_current}"
                app:layout_constraintEnd_toEndOf="@+id/view4"
                app:layout_constraintStart_toStartOf="@+id/view4"
                app:layout_constraintTop_toBottomOf="@+id/view8" />

            <View
                android:id="@+id/view10"
                android:layout_width="@dimen/_2sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@{order.orderStatus!= OrderEnums.PLACED &amp;&amp; order.orderStatus!= OrderEnums.CONFIRMED? @color/green: @color/lightBlack}"
                app:layout_constraintEnd_toEndOf="@+id/view7"
                app:layout_constraintStart_toStartOf="@+id/view7"
                app:layout_constraintTop_toBottomOf="@+id/view7" />

            <View
                android:id="@+id/view9"
                android:layout_width="@dimen/_14sdp"
                android:layout_height="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@{order.orderStatus== OrderEnums.DELIVERED? @drawable/ic_green_check: @drawable/shape_status_current}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/view4"
                app:layout_constraintStart_toStartOf="@+id/view4"
                app:layout_constraintTop_toBottomOf="@+id/view10" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view4"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_placed"
                    android:theme="@style/bigTextTheme" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_placed_message"
                    android:textColor="@color/lightBlack"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="@{order.orderStatus != OrderEnums.PLACED?1.0f:0.3f}"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/view5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view4"
                app:layout_constraintTop_toBottomOf="@+id/view6">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_confirmed"
                    android:theme="@style/bigTextTheme" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_confirmed_message"
                    android:textColor="@color/lightBlack"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="@{order.orderStatus!= OrderEnums.PLACED &amp;&amp; order.orderStatus!= OrderEnums.CONFIRMED?1.0f:0.3f}"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/view7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view4"
                app:layout_constraintTop_toBottomOf="@+id/view8">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_shipped"
                    android:theme="@style/bigTextTheme" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_shipped_message"
                    android:textColor="@color/lightBlack"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="@{order.orderStatus== OrderEnums.DELIVERED?1.0f:0.3f}"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/view9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view4"
                app:layout_constraintTop_toTopOf="@+id/view9">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_delivered"
                    android:theme="@style/bigTextTheme" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_delivered_message"
                    android:textColor="@color/lightBlack"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>